# acoustid-legacy-search

./: .flake8  .mypy.ini  pyproject.toml  update_index_proto.sh
.github/workflows/: test.yml
acoustid_legacy_search/: conftest.py  index.py  main.py  searcher.py  service.py  types.py
acoustid_legacy_search/db/: __init__.py  client.py
acoustid_legacy_search/index/: client.py
acoustid_legacy_search/index/proto/: index_pb2.py  index_pb2.pyi  index_pb2_grpc.py
acoustid_legacy_search/proto/: legacy_search.proto  legacy_search_pb2.py  legacy_search_pb2.pyi  legacy_search_pb2_grpc.py
scripts/: lint.sh  update_index_proto.sh  update_proto.sh
